kuber-homework/05/manifests/deployment_be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-multitool
spec:
  selector:
    matchLabels:
      app: backend-multitool
  template:
    metadata:
      labels:
        app: backend-multitool
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 8080
