kuber-homework/05/manifests/svc_be.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-multitool-service
spec:
  selector:
    app: backend-multitool
  ports:
    - name: multitool
      protocol: TCP
      port: 9002
      targetPort: 8080
