kuber-homework/05/manifests/svc_fe.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx-service
spec:
  selector:
    app: frontend-nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
